<resources>
    <string name="app_name">Eat-It</string>
    <string name="eat_it">Eat-It</string>
    <string name="todo">LOGO</string>
    <string name="here_we_will_login">here we will login</string>
    <string name="loginlogo">loginlogo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="new_user">New User?</string>
    <string name="go">GO</string>
    <string name="phone_no">Phone No.</string>
    <string name="username">Username</string>
    <string name="email2">Email</string>
    <string name="todo2">TODO2</string>
    <string name="welcome">WELCOME</string>
    <string name="signup_and_lets_start_ordering">SignUp and Lets Start Ordering</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="cart">Cart</string>
    <string name="you">You</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>